--- a/todo.yaml
+++ b/todo.yaml
@@ -31,7 +31,7 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: containergo
+  name: web-go
   namespace: maxigoge
 spec:
   replicas: 2
